2013-01-15  Pitchumani Sivanupandi  <Pitchumani.S@atmel.com>

	* include/avr/power.h: Specialize clock_prescale_set/get
	for mega hvb devices
4
2013-05-03 Mike Rice <mike@mikerice.name>

    * Deleted function iso_weeknum(), replaced with iso_week_date()

2013-05-03 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Georg-Johann Lay:
	bug #38135: Install a dummy stdfix-avrlibc.h
	* include/stdfix-avrlibc.h: New file.
	* include/Makefile.am (avr_HEADERS): Add stdfix-avrlibc.h.

2013-05-03 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Dean Camera:
	patch #7212: Add pgm_read_ptr() macros to pgmspace.h
	* include/avr/pgmspace.h (pgm_read_ptr_near, pgm_read_ptr_far,
	pgm_read_ptr): New macros.

2013-05-03 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Radoslaw Koppel:
	patch #7220: Add UBRR overload functionality to <util/setbaud.h>
	* include/util/setbaud.h: check for overflow of UBRR_VALUE

2013-05-03 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Frédéric Nadeau:
	patch #7260: Addition to power.h
	* include/avr/power.h: Extend clock prescaler support to devices
	with XDIV (ATmega103, ATmega64, ATmega128)

2013-05-03 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Maksim Kuleshov:
	patch #7654 include/delay.h: delay_us >255us without decreasing
	resolution
	* include/util/delay.h.in (_delay_us): Add a second decision
	logic that decides whether _delay_loop_2() could still be
	used, or the fallback to _delay_ms() is required; while here,
	reorder local variables so it compiles warning-free in all
	configurations

2013-05-03 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by W. Trevor King:
	patch #7826 Add ATMega32u4 support to the led-blinking demo
	* doc/examples/demo/iocompat.h: Add ATmega32U4
	* doc/examples/demo/Makefile: (Dito.)

2013-05-03 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Stefan Kristiansson:
	patch #7910 Add missing PCINT2_vect to iotn40.h and update
	all the following vector numbers